fix(options): z-index bug

--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ header {
   position: absolute;
   right: 2em;
   top: 2em;
+  z-index: 2;
 }
 #chaos {
   margin-right: 1em;
@@ -85,6 +86,7 @@ header {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  background: white;
 }
 .settingItem {
   display: flex;
